--- a/src/app/credit-form/credit-form.component.html
+++ b/src/app/credit-form/credit-form.component.html
@@ -1,16 +1,11 @@
-<form [formGroup]="creditForm">
-  <div class="field">
-    <label formControlName="name" class="label">Name</label>
-    <input formControlName="name" class="input">
-    <ng-container *ngIf="creditForm.controls.name.touched && creditForm.controls.name.errors">
-      <div *ngIf="creditForm.controls.name.errors?.['required']">
-        <p class="help is-danger">This field is required.</p>
-      </div>
-      <div *ngIf="creditForm.controls.name.errors?.['minlength']">
-        <p class="help is-danger">You only entered {{ creditForm.controls.name.errors['minlength'].actualLength }} characters. Minimum {{ creditForm.controls.name.errors['minlength'].requiredLength }} characters required.</p>
-      </div>
-    </ng-container>
-  </div>
+<form [formGroup]="creditForm" (ngSubmit)="onSubmit()">
+    <app-input label="Name" [control]="creditForm.controls.name" [label]="'Name'"></app-input>
+    <app-input label="Card Number" [control]="creditForm.controls.cardNumber"></app-input>
+    <app-input label="Exp." [control]="creditForm.controls.expiration"></app-input>
+    <app-input label="CVV" [control]="creditForm.controls.securityCode"></app-input>
+    <div class="control">
+      <button [disabled]="creditForm.invalid" class="button is-link">Submit</button>
+    </div>
 </form>
 <div>{{ creditForm.value | json }}</div>
 <div>Form is valid {{ creditForm.valid }}</div>
