feat(app.component.html): remove unnecessary divs and add card-display component feat(card-display.component.css): add styles for card display feat(card-display.component.html): add card display layout and bindings feat(card-display.component.ts): add input properties for card details feat(credit-form.component.html): add card-display component and reset button feat(credit-form.component.ts): add reset function to clear form feat(date-form-control.ts): handle null value in setValue method
The changes were made to improve the user interface by adding a visual representation of the credit card and a reset button to clear the form. The card display component was updated to accept input properties for the card details. The setValue method in date-form-control was updated to handle null values to prevent errors when resetting the form.

--- a/src/app/credit-form/credit-form.component.html
+++ b/src/app/credit-form/credit-form.component.html
@@ -1,12 +1,30 @@
-<form [formGroup]="creditForm" (ngSubmit)="onSubmit()">
-    <app-input label="Name" [control]="creditForm.controls.name" [label]="'Name'"></app-input>
-    <app-input label="Card Number" [control]="creditForm.controls.cardNumber"></app-input>
-    <app-input label="Exp." [control]="creditForm.controls.expiration"></app-input>
-    <app-input label="CVV" [control]="creditForm.controls.securityCode"></app-input>
-    <div class="control">
-      <button [disabled]="creditForm.invalid" class="button is-link">Submit</button>
+
+<div class="section container">
+  <div class="columns">
+    <div class="column is-half-tablet">
+      <app-card-display [expiration]="creditForm.controls.expiration.value" [name]="creditForm.controls.name.value" [cardNumber]="creditForm.controls.cardNumber.value"></app-card-display>
     </div>
-</form>
-<div>{{ creditForm.value | json }}</div>
-<div>Form is valid {{ creditForm.valid }}</div>
-<div>Form Errors {{ creditForm.controls.name.errors | json }}</div>
+    <div class="column is-half-tablet">
+      <form [formGroup]="creditForm" (ngSubmit)="onSubmit()">
+          <app-input label="Name" [control]="creditForm.controls.name" [label]="'Name'"></app-input>
+          <app-input label="Card Number" [control]="creditForm.controls.cardNumber"></app-input>
+          <div class="control columns pt-3">
+            <div class="column">
+              <app-input label="Exp." [control]="creditForm.controls.expiration"></app-input>
+            </div>
+            <div class="column">
+              <app-input label="CVV" [control]="creditForm.controls.securityCode"></app-input>
+            </div>
+          </div>
+          <div class="control columns pt-3">
+            <div class="column">
+              <button [disabled]="creditForm.invalid" class="button is-link">Submit</button>
+            </div>
+            <div class="column">
+              <button class="button is-warning" (click)="onReset()">Reset</button>
+            </div>
+          </div>
+      </form>
+    </div>
+  </div>
+</div>
